sandbox/output
Reorder.java:40: error: incompatible types: List<List<Integer>> cannot be converted to ArrayList<List<Integer>>
            ArrayList<List<Integer>> result1 = mixInto(toMix, result.get(0));
                                                      ^
1 error
